# membranes

./: pyproject.toml
src/membranes/: __init__.py  cli.py  injection_patterns.yaml  scanner.py  threat_logger.py
src/membranes.egg-info/: SOURCES.txt
tests/: test_scanner.py
