[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membranes"
version = "0.1.0"
description = "The VirusTotal for prompt injection — open-source defense with crowdsourced threat intelligence for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cosmo & Ryan", email = "hello@membranes.dev"}
]
keywords = [
    "ai", "llm", "prompt-injection", "security", "agents",
    "defense", "sanitization", "chatgpt", "claude", "safety",
    "cybersecurity", "threat-intelligence", "ai-safety",
    "llm-security", "guardrails", "content-filtering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
llm = [
    "transformers>=4.30",
    "torch>=2.0",
]

[project.scripts]
membranes = "membranes.cli:main"

[project.urls]
Homepage = "https://github.com/thebearwithabite/membranes"
Documentation = "https://github.com/thebearwithabite/membranes#-quick-start"
Repository = "https://github.com/thebearwithabite/membranes"
Issues = "https://github.com/thebearwithabite/membranes/issues"
Changelog = "https://github.com/thebearwithabite/membranes/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
membranes = ["*.yaml"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
